# sample

./: CMakeLists.txt  prj.conf
apps/fwload/: README.txt
apps/fwload/linux/: README.txt
apps/fwload/linux/app/: Makefile  app.c  app.h  debug.h  img_types.h  ldr_info.h  ldr_parser.c  ldr_parser.h  main.c
apps/fwload/linux/driver/: Makefile  ldr_api.c  uccp.h  uccp_drv.c  uccp_io.c  uccp_io.h
apps/fwload/linux/driver/tz5000/: Kconfig  Makefile  debug.h  ldr_api.c  ldr_api.h  ldr_loader.c  ldr_loader.h  uccp.h  uccp_drv.c  uccp_drv.h  uccp_io.c
apps/fwload/uccpapp/source/generic/: uccpapp.c
apps/rpu_snapshot/: get_rpu_snapshot.c
apps/utils/: driver_p4_sync_all_branches.sh  get_rpu_stats.sh  rf_stats_format.txt  rf_stats_parser.pl  spidump.py
docs/: Host RPU Comm Interface.docx  RPU Debug Infrastructure.Triage.docx  RPU Driver.debugfs API.Reference.docx  RPU Driver.procfs API usage guide.docx  RPU Host Driver.docx  UCCP Economy Mode Design.docx  WLAN Host Driver UCCP IF.docx  WLAN HostDriver Test Plan.xlsx  WLAN.Host Driver Design.docx  WLAN.Host Loopback Testbench.docx  WLAN.Host to RPU Interface.docx
docs/fullmac/: README
docs/fullmac/img_rpu_driver_api/: conf.py  index.rst
docs/fullmac/img_rpu_driver_api/power/: power_driver.rst
docs/fullmac/img_rpu_driver_api/wlan/: osal_interface.rst  umac_interface.rst  wlan_fullmac_driver.rst
docs/softmac/: README  index.rst
docs/softmac/img/: img_hal_api.rst  img_rpu_api.rst
src/: main.c  nrf-config.h
